--- a/ImmiCanada/Views/NewsInterface/PartialNewsIndex.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsIndex.cshtml
@@ -6,9 +6,9 @@
                 <div>Quyền tự do của bạn ở Canada</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
-                    <div class="col-2 count-seen">999</div>
-                    <div class="col-2 count-like">999</div>
-                    <div class="col-2 count-message">999</div>
+                    <div class="count-seen">999</div>
+                    <div class="count-like">999</div>
+                    <div class="count-message">999</div>
                 </div>
             </div>
         </div>
@@ -19,9 +19,9 @@
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
-                    <div class="col-2 count-seen">999</div>
-                    <div class="col-2 count-like">999</div>
-                    <div class="col-2 count-message">999</div>
+                    <div class="count-seen">999</div>
+                    <div class="count-like">999</div>
+                    <div class="count-message">999</div>
                 </div>
             </div>
         </div>
