--- a/ImmiCanada/Views/NewsInterface/PartialNewsSubMenu.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsSubMenu.cshtml
@@ -8,7 +8,7 @@
                 <div class="col margin-auto @(ViewData["submenuActive"].ToString() == "NewsIndex" ? "sub-menu-active" : string.Empty)"><a href="/NewsInterface/Index">Nhập cư</a></div>
                 <div class="col margin-auto @(ViewData["submenuActive"].ToString() == "NewsStudyAboard" ? "sub-menu-active" : string.Empty)"><a href="/NewsInterface/NewsStudyAboard">Du Học</a></div>
                 <div class="col margin-auto @(ViewData["submenuActive"].ToString() == "NewsTravelling" ? "sub-menu-active" : string.Empty)"><a href="/NewsInterface/NewsTravelling">Du Lịch</a></div>
-                <div class="col margin-auto @(ViewData["submenuActive"].ToString() == "NewsIndex" ? "sub-menu-active" : string.Empty)"><a href="/NewsInterface/NewsStudyAboard">Chính Trị</a></div>
+                <div class="col margin-auto @(ViewData["submenuActive"].ToString() == "NewsPolitics" ? "sub-menu-active" : string.Empty)"><a href="/NewsInterface/NewsPolitics">Chính Trị</a></div>
                 <div class="col margin-auto @(ViewData["submenuActive"].ToString() == "NewsImmigrationStory" ? "sub-menu-active" : string.Empty)"><a href="/NewsInterface/NewsImmigrationStory">Câu Chuyện Nhập Cư</a></div>
             </div>
         </div>
