--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -164,6 +164,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-left: 65px;
 }
 
+.pad-left10px {
+    padding-left: 10px;
+}
+
+.pad-left15px {
+    padding-left: 15px;
+}
+
 .pad-left20px {
     padding-left: 20px !important;
 }
@@ -282,6 +290,18 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .max-height245px {
     max-height: 245px;
+}
+
+.height400px {
+    height: 400px;
+}
+
+.height350px {
+    height: 350px;
+}
+
+.height297px{
+    height: 297px;
 }
 
 .font-weight600 {
@@ -900,6 +920,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-left: 35px;
 }
 
+.pad-left30px {
+    padding-left: 30px;
+}
+
 .interested-text {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
     font-size: 13px;
@@ -1372,16 +1396,16 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
         color: #84848e;
     }
 
-    .news-sub-menu .sub-menu-item a:hover {
-        color: #84848e;
-        text-decoration: none;
-    }
+        .news-sub-menu .sub-menu-item a:hover {
+            color: #84848e;
+            text-decoration: none;
+        }
 
 .sub-menu-active:after {
-    content: ""; 
-    display: block; 
-    width: 30%; 
-    border-bottom: 3px solid #efb2b2; 
+    content: "";
+    display: block;
+    width: 30%;
+    border-bottom: 3px solid #efb2b2;
 }
 
 .margin-auto {
@@ -1397,15 +1421,21 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-size: 25px;
     font-weight: 600;
     padding-left: 15px;
+    padding-bottom: 10px;
     border-left: 6px solid #ed2025;
-    opacity: 0.9;
+    opacity: 0.8;
 }
 
     .news-index .news-info .new-sec-info {
-        font-size: 22px;
+        font-size: 15px;
         font-style: italic;
         font-weight: normal;
+        height: 25px;
     }
+
+.news-immigration-story .news-info .new-sec-info .count-seen {
+    margin-left: -10px;
+}
 
 .news-index .new-info-sec-line .news-info {
     font-size: 15px;
@@ -1419,28 +1449,50 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
         font-weight: normal;
     }
 
+        .news-index .new-info-sec-line .news-info .new-sec-info .count-seen {
+            margin-left: -30px;
+        }
+
+.news-immigration-story .new-info-sec-line .news-info .new-sec-info .count-seen {
+    margin-left: -10px;
+}
+
+.news-study-aboard .new-info-sec-line .news-info .new-sec-info .count-seen {
+    margin-left: -10px;
+}
+
 .count-seen {
     background-image: url(../Content/images/seen.png);
     background-repeat: no-repeat;
-    background-size: contain;
-    padding: 0px 10px 10px 30px;
+    background-size: cover;
+    padding-left: 19px;
     color: #FFFFFF;
+    width: 45px;
+    font-size: 13px;
+    margin-left: -40px;
+    margin-right: 5px;
 }
 
 .count-like {
     background-image: url(../Content/images/like.png);
     background-repeat: no-repeat;
-    background-size: contain;
-    padding: 0px 10px 10px 30px;
+    background-size: cover;
+    padding-left: 19px;
     color: #FFFFFF;
+    width: 45px;
+    font-size: 13px;
+    margin-right: 5px;
 }
 
 .count-message {
     background-image: url(../Content/images/message.png);
     background-repeat: no-repeat;
-    background-size: contain;
-    padding: 0px 10px 10px 30px;
+    background-size: cover;
+    padding-left: 19px;
     color: #FFFFFF;
+    width: 45px;
+    font-size: 13px;
+    margin-right: 5px;
 }
 
 .news-list-container .news-item {
@@ -1466,6 +1518,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-style: italic;
     color: #948989;
     padding-bottom: 15px;
+}
+
+.news-list-container .news-item .count-seen,
+.news-list-container .news-item .count-like,
+.news-list-container .news-item .count-message {
+    margin-left: 0px;
+    background-size: contain;
+    padding-left: 19px !important;
 }
 
 .read-more {
@@ -1522,11 +1582,37 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .news-immigration-story .one-and-a-half-banner-item .count-like,
 .news-immigration-story .one-and-a-half-banner-item .count-seen,
 .news-immigration-story .one-and-a-half-banner-item .count-message {
-    padding-left: 24px;
+    padding-left: 20px;
 }
 
 .news-study-aboard .one-two-news-item .news-info {
     width: 97.5%;
+}
+
+.news-politics .new-item-main-title {
+    color: #84848e;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.news-politics .new-item-main-title-left {
+    color: #84848e;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.grey-text-color {
+    color: #84848e;
+}
+
+.news-politics .left-banner {
+    box-shadow: 5px 10px 18px #888888;
+    border-radius: 5px;
+}
+
+.news-politics .right-banner {
+    box-shadow: 5px 10px 18px #888888;
+    border-radius: 5px;
 }
 /* Support for client - BEGIN */
 table.text-editor-supported {
