--- a/ImmiCanada/Views/NewsInterface/PartialNewsImmigrationStory.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsImmigrationStory.cshtml
@@ -5,10 +5,10 @@
             <div class="news-info">
                 <div>Quyền tự do của bạn ở Canada</div>
                 <div class="row new-sec-info">
-                    <div class="col-3">By Canada</div>
-                    <div class="col-2 count-seen">999</div>
-                    <div class="col-2 count-like">999</div>
-                    <div class="col-2 count-message">999</div>
+                    <div class="col-2">By Canada</div>
+                    <div class="count-seen">999</div>
+                    <div class="count-like">999</div>
+                    <div class="count-message">999</div>
                 </div>
             </div>
         </div>
@@ -20,9 +20,9 @@
                     <div class="row new-sec-info">
                         <div class="col-4">By Canada</div>
 
-                        <div class="col-2 count-seen">999</div>
-                        <div class="col-2 count-like">999</div>
-                        <div class="col-2 count-message">999</div>
+                        <div class="count-seen">999</div>
+                        <div class="count-like">999</div>
+                        <div class="count-message">999</div>
                     </div>
                 </div>
             </div>
@@ -33,9 +33,9 @@
                     <div class="row new-sec-info">
                         <div class="col-4">By Canada</div>
 
-                        <div class="col-2 count-seen">999</div>
-                        <div class="col-2 count-like">999</div>
-                        <div class="col-2 count-message">999</div>
+                        <div class="count-seen">999</div>
+                        <div class="count-like">999</div>
+                        <div class="count-message">999</div>
                     </div>
                 </div>
             </div>
@@ -49,9 +49,9 @@
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
-                    <div class="col-2 count-seen pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-like pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-message pad-left20px">999</div>
+                    <div class="count-seen pad-left20px">999</div>&nbsp;
+                    <div class="count-like pad-left20px">999</div>&nbsp;
+                    <div class="count-message pad-left20px">999</div>
                 </div>
             </div>
         </div>
@@ -62,9 +62,9 @@
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
-                    <div class="col-2 count-seen pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-like pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-message pad-left20px">999</div>
+                    <div class="count-seen pad-left20px">999</div>&nbsp;
+                    <div class="count-like pad-left20px">999</div>&nbsp;
+                    <div class="count-message pad-left20px">999</div>
                 </div>
             </div>
         </div>
@@ -75,9 +75,9 @@
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
-                    <div class="col-2 count-seen pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-like pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-message pad-left20px">999</div>
+                    <div class="count-seen pad-left20px">999</div>&nbsp;
+                    <div class="count-like pad-left20px">999</div>&nbsp;
+                    <div class="count-message pad-left20px">999</div>
                 </div>
             </div>
         </div>
