--- a/ImmiCanada/Views/NewsInterface/PartialNewsList.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsList.cshtml
@@ -6,9 +6,9 @@
                 <div class="row col-12 news-item-sec-title">Người nhập cư đến Quebec sẽ được yêu cầu vượt qua "thử nghiệm giá trị" bắt đầu từ ngày 1 tháng 1</div>
                 <div class="row col-12">
                     <div class="col-2 remove-paddingleft by-canada-visa remove-paddingright">By Canada Visa</div>
-                    <div class="col-1 count-seen pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-like pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-message pad-left25px">999</div>
+                    <div class="count-seen pad-left25px">999</div>&nbsp;
+                    <div class="count-like pad-left25px">999</div>&nbsp;
+                    <div class="count-message pad-left25px">999</div>
                 </div>
                 <div class="row col-12">
                     <div class="col-4 remove-paddingleft">
@@ -27,9 +27,9 @@
                 <div class="row col-12 news-item-sec-title">Người nhập cư đến Quebec sẽ được yêu cầu vượt qua "thử nghiệm giá trị" bắt đầu từ ngày 1 tháng 1</div>
                 <div class="row col-12">
                     <div class="col-2 remove-paddingleft by-canada-visa remove-paddingright">By Canada Visa</div>
-                    <div class="col-1 count-seen pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-like pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-message pad-left25px">999</div>
+                    <div class="count-seen pad-left25px">999</div>&nbsp;
+                    <div class="count-like pad-left25px">999</div>&nbsp;
+                    <div class="count-message pad-left25px">999</div>
                 </div>
                 <div class="row col-12">
                     <div class="col-4 remove-paddingleft">
@@ -48,9 +48,9 @@
                 <div class="row col-12 news-item-sec-title">Người nhập cư đến Quebec sẽ được yêu cầu vượt qua "thử nghiệm giá trị" bắt đầu từ ngày 1 tháng 1</div>
                 <div class="row col-12">
                     <div class="col-2 remove-paddingleft by-canada-visa remove-paddingright">By Canada Visa</div>
-                    <div class="col-1 count-seen pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-like pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-message pad-left25px">999</div>
+                    <div class="count-seen pad-left25px">999</div>&nbsp;
+                    <div class="count-like pad-left25px">999</div>&nbsp;
+                    <div class="count-message pad-left25px">999</div>
                 </div>
                 <div class="row col-12">
                     <div class="col-4 remove-paddingleft">
@@ -69,9 +69,9 @@
                 <div class="row col-12 news-item-sec-title">Người nhập cư đến Quebec sẽ được yêu cầu vượt qua "thử nghiệm giá trị" bắt đầu từ ngày 1 tháng 1</div>
                 <div class="row col-12">
                     <div class="col-2 remove-paddingleft by-canada-visa remove-paddingright">By Canada Visa</div>
-                    <div class="col-1 count-seen pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-like pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-message pad-left25px">999</div>
+                    <div class="count-seen pad-left25px">999</div>&nbsp;
+                    <div class="count-like pad-left25px">999</div>&nbsp;
+                    <div class="count-message pad-left25px">999</div>
                 </div>
                 <div class="row col-12">
                     <div class="col-4 remove-paddingleft">
@@ -90,9 +90,9 @@
                 <div class="row col-12 news-item-sec-title">Người nhập cư đến Quebec sẽ được yêu cầu vượt qua "thử nghiệm giá trị" bắt đầu từ ngày 1 tháng 1</div>
                 <div class="row col-12">
                     <div class="col-2 remove-paddingleft by-canada-visa remove-paddingright">By Canada Visa</div>
-                    <div class="col-1 count-seen pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-like pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-message pad-left25px">999</div>
+                    <div class="count-seen pad-left25px">999</div>&nbsp;
+                    <div class="count-like pad-left25px">999</div>&nbsp;
+                    <div class="count-message pad-left25px">999</div>
                 </div>
                 <div class="row col-12">
                     <div class="col-4 remove-paddingleft">
@@ -111,9 +111,9 @@
                 <div class="row col-12 news-item-sec-title">Người nhập cư đến Quebec sẽ được yêu cầu vượt qua "thử nghiệm giá trị" bắt đầu từ ngày 1 tháng 1</div>
                 <div class="row col-12">
                     <div class="col-2 remove-paddingleft by-canada-visa remove-paddingright">By Canada Visa</div>
-                    <div class="col-1 count-seen pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-like pad-left25px">999</div>&nbsp;
-                    <div class="col-1 count-message pad-left25px">999</div>
+                    <div class="count-seen pad-left25px">999</div>&nbsp;
+                    <div class="count-like pad-left25px">999</div>&nbsp;
+                    <div class="count-message pad-left25px">999</div>
                 </div>
                 <div class="row col-12">
                     <div class="col-4 remove-paddingleft">
