--- a/ImmiCanada/Views/NewsInterface/PartialNewsStudyAboard.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsStudyAboard.cshtml
@@ -6,9 +6,9 @@
                 <div>Quyền tự do của bạn ở Canada</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
-                    <div class="col-2 count-seen">999</div>
-                    <div class="col-2 count-like">999</div>
-                    <div class="col-2 count-message">999</div>
+                    <div class="count-seen">999</div>
+                    <div class="count-like">999</div>
+                    <div class="count-message">999</div>
                 </div>
             </div>
         </div>
@@ -18,9 +18,9 @@
                 <div>Quyền tự do của bạn ở Canada</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
-                    <div class="col-2 count-seen">999</div>
-                    <div class="col-2 count-like">999</div>
-                    <div class="col-2 count-message">999</div>
+                    <div class="count-seen">999</div>
+                    <div class="count-like">999</div>
+                    <div class="count-message">999</div>
                 </div>
             </div>
         </div>
@@ -33,9 +33,9 @@
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
-                    <div class="col-2 count-seen pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-like pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-message pad-left20px">999</div>
+                    <div class="count-seen pad-left20px">999</div>&nbsp;
+                    <div class="count-like pad-left20px">999</div>&nbsp;
+                    <div class="count-message pad-left20px">999</div>
                 </div>
             </div>
         </div>
@@ -46,9 +46,9 @@
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
-                    <div class="col-2 count-seen pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-like pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-message pad-left20px">999</div>
+                    <div class="count-seen pad-left20px">999</div>&nbsp;
+                    <div class="count-like pad-left20px">999</div>&nbsp;
+                    <div class="count-message pad-left20px">999</div>
                 </div>
             </div>
         </div>
@@ -59,9 +59,9 @@
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
-                    <div class="col-2 count-seen pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-like pad-left20px">999</div>&nbsp;
-                    <div class="col-2 count-message pad-left20px">999</div>
+                    <div class="count-seen pad-left20px">999</div>&nbsp;
+                    <div class="count-like pad-left20px">999</div>&nbsp;
+                    <div class="count-message pad-left20px">999</div>
                 </div>
             </div>
         </div>
