--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -300,7 +300,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     height: 350px;
 }
 
-.height297px{
+.height297px {
     height: 297px;
 }
 
@@ -1614,6 +1614,70 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     box-shadow: 5px 10px 18px #888888;
     border-radius: 5px;
 }
+
+.personal-support {
+    width: 60px;
+    height: 60px;
+}
+
+.border-right-red {
+    border-right: 4px solid #ed2025;
+}
+
+.social-box-like {
+    background-color: #f13f66;
+    border-radius: 5px;
+    color: #FFFFFF;
+    font-weight: 600;
+    margin-top: 10px;
+    max-width: 23.5%;
+    height: 25px;
+    font-size: 12px;
+    padding-top: 3px;
+}
+
+.social-box-facebook {
+    background-color: #2172dc;
+    border-radius: 5px;
+    color: #FFFFFF;
+    font-weight: 600;
+    margin-top: 10px;
+    max-width: 23.5%;
+    height: 25px;
+    font-size: 11px;
+    padding-top: 3px;
+}
+
+.social-box-email {
+    background-color: #999999;
+    border-radius: 5px;
+    color: #FFFFFF;
+    font-weight: 600;
+    margin-top: 10px;
+    max-width: 23.5%;
+    height: 25px;
+    font-size: 11px;
+    padding-top: 3px;
+}
+
+.social-box-print {
+    background-color: #e5332f;
+    border-radius: 5px;
+    color: #FFFFFF;
+    font-weight: 600;
+    margin-top: 10px;
+    max-width: 23.5%;
+    height: 25px;
+    font-size: 11px;
+    padding-top: 3px;
+}
+
+    .social-box-like i,
+    .social-box-facebook i,
+    .social-box-email i,
+    .social-box-print i {
+        padding-left: 3px;
+    }
 /* Support for client - BEGIN */
 table.text-editor-supported {
     border: 0;
