--- a/ImmiCanada/Views/NewsInterface/NewsImmigration.cshtml
+++ b/ImmiCanada/Views/NewsInterface/NewsImmigration.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="row mar-top25px news-immigration-container">
     <div class="row col-12">
         <div class="col-6 pos-rel">
-            <img src="../Content/images/tin-nhap-cu-1.jpg" class="img-fluid" />
+            <img src="~/Content/images/tin-nhap-cu-1.jpg" class="img-fluid" />
             <div class="news-info">
                 <div>Quyền tự do của bạn ở Canada</div>
                 <div class="row new-sec-info">
