--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -606,6 +606,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: #006190;
     font-weight: 700;
     font-size: 30px;
+    width: 95%;
 }
 
 .box-shadow-chatluongcuocsong {
