--- a/ImmiCanada/Views/NewsInterface/PartialNewsPolitics.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsPolitics.cshtml
@@ -1,12 +1,15 @@
-﻿<div class="row mar-top25px news-index news-politics">
+﻿@{
+    List<ImmiCanada.Entities.News> News = (List<ImmiCanada.Entities.News>)ViewData["NewsPolitics"];
+}
+<div class="row mar-top25px news-index news-politics">
     <div class="row col-12 remove-paddingright one-two-news-item">
         <div class="col-6 pos-rel remove-paddingleft remove-paddingright left-banner">
-            <img src="../Content/images/tin-nhap-cu-1.jpg" class="full-width height297px" />
-            <div class="new-item-main-title pad-left15px pad-top15px pad-bot10px">Quyền tự do của bạn ở Canada</div>
+            <img src="@News[0].Base64Image" class="full-width height297px" />
+            <div class="new-item-main-title pad-left15px pad-top15px pad-bot10px">@News[0].Title</div>
             <div class="row new-sec-info pad-left15px">
                 <div class="col-3 grey-text-color">By Canada</div>
-                <div class="count-seen">999</div>
-                <div class="count-like">999</div>
+                <div class="count-seen">@News[0].NumberOfView</div>
+                <div class="count-like">@News[0].@News[0].NumberOfLike</div>
                 <div class="count-message">999</div>
             </div>
             <div class="pad-left15px pad-top10px pad-bot10px grey-text-color">
@@ -15,13 +18,13 @@
         </div>
         <div class="col-6 pos-rel remove-paddingright pad-left30px">
             <div class="row right-banner">
-                <div class="col-4 remove-paddingleft remove-paddingright"><img src="../Content/images/tin-nhap-cu-1.jpg" class="full-width" /></div>
+                <div class="col-4 remove-paddingleft remove-paddingright"><img src="@News[1].Base64Image" class="full-width" /></div>
                 <div class="col-8 remove-paddingleft">
-                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px">Quyền tự do của bạn ở Canada</div>
+                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px">@News[1].Title</div>
                     <div class="row new-sec-info pad-left15px">
                         <div class="col-5 grey-text-color">By Canada</div>
-                        <div class="count-seen">999</div>
-                        <div class="count-like">999</div>
+                        <div class="count-seen">@News[1].NumberOfView</div>
+                        <div class="count-like">@News[1].NumberOfLike</div>
                         <div class="count-message">999</div>
                     </div>
                 </div>
