--- a/ImmiCanada/Views/NewsInterface/PartialNewsTravelling.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsTravelling.cshtml
@@ -56,14 +56,14 @@
             </div>
         </div>
         <div class="one-third-news-item pos-rel">
-            <img src="../Content/images/tin-nhap-cu-1.jpg" class="img-fluid full-height" />
+            <img src="@News[4].Base64Image" class="img-fluid full-height" />
             <div class="news-info full-width">
-                <div>Quyền tự do của bạn ở Canada</div>
+                <div>@News[1].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
-                    <div class="count-seen pad-left20px">999</div>&nbsp;
-                    <div class="count-like pad-left20px">999</div>&nbsp;
+                    <div class="count-seen pad-left20px">@News[1].NumberOfView</div>&nbsp;
+                    <div class="count-like pad-left20px">@News[1].NumberOfLike</div>&nbsp;
                     <div class="count-message pad-left20px">999</div>
                 </div>
             </div>
