--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -1679,6 +1679,34 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     .social-box-print i {
         padding-left: 3px;
     }
+
+.latest-news-container {
+    background-color: #f9f9f9;
+    margin-top: 20px;
+}
+
+    .latest-news-container img {
+        width: 40px;
+        height: 40px !important;
+    }
+
+    .latest-news-container a {
+        color: #000000;
+    }
+
+    .latest-news-container marquee .block-scroll-content {
+        display: contents;
+        margin-right: 30px;
+        float: left;
+    }
+
+.latest-news {
+    background-color: #ff4181;
+    font-weight: 600;
+    padding: 10px !important;
+    color: #FFFFFF;
+    font-size: 20px;
+}
 /* Support for client - BEGIN */
 table.text-editor-supported {
     border: 0;
