--- a/ImmiCanada/Views/News/Create.cshtml
+++ b/ImmiCanada/Views/News/Create.cshtml
@@ -44,6 +44,14 @@
 
     <div class="form-group row">
         <div class="col-6">
+            <label>Số lượng view</label>
+            @Html.EditorFor(model => model.NumberOfShare, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.NumberOfShare, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-6">
             <label>Tác giả</label>
             @Html.DropDownList("Creator", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Creator, "", new { @class = "text-danger" })
